feat: устройства и трафик в клиентском API
